Fix: link para anexos

--- a/src/components/Shareable/Input/InputFile/style.scss
+++ b/src/components/Shareable/Input/InputFile/style.scss
@@ -82,6 +82,10 @@
   color: #086397 !important;
 }
 
+.link:hover {
+  text-decoration: underline !important;
+}
+
 .arquivos-anexados {
   background: #f3f3f3;
 }
